--- a/ssh/config
+++ b/ssh/config
@@ -5,3 +5,7 @@ IdentityFile ~/.ssh/danro
 Host github.com
 User git
 IdentityFile ~/.ssh/github
+
+Host heroku.com
+User git
+IdentityFile ~/.ssh/heroku
