--- a/ssh/config
+++ b/ssh/config
@@ -9,3 +9,7 @@ IdentityFile ~/.ssh/github
 Host heroku.com
 User git
 IdentityFile ~/.ssh/heroku
+
+Host codebasehq.com
+User git
+IdentityFile ~/.ssh/codebasehq
