--- a/ssh/config
+++ b/ssh/config
@@ -38,3 +38,7 @@ Host ocean.danro.net
 	User root
 	IdentityFile ~/.ssh/digitalocean
 
+Host teamcity.*
+	User ubuntu
+	IdentityFile ~/.ssh/teamcity
+
